--- a/index.html
+++ b/index.html
@@ -33,7 +33,46 @@
         </legend>
         <div class="speech-form__settings">
           <label class="speech-form__settings-title">Settings</label>
-          <div class="speech-form__speed-area">
+          <div class="speech-form__settings-area">
+            <p class="speech-form__settings-label">Voice</p>
+            <div>
+              <select
+                class="speech-form__settings-select"
+                name="lang"
+                id="lang"
+              >
+                <option value="en-US">en-US</option>
+                <option value="en-GB">en-GB</option>
+                <option value="es-ES">es-ES</option>
+                <option value="fr-FR">fr-FR</option>
+                <option value="de-DE">de-DE</option>
+                <option value="it-IT">it-IT</option>
+                <option value="ja-JP">ja-JP</option>
+                <option value="ko-KR">ko-KR</option>
+                <option value="pt-BR">pt-BR</option>
+                <option value="ru-RU">ru-RU</option>
+              </select>
+              <select
+                class="speech-form__settings-select"
+                name="voice"
+                id="voice"
+              >
+                <option value="albert">Albert</option>
+                <option value="carla">Carla</option>
+                <option value="carmen">Carmen</option>
+                <option value="david">David</option>
+                <option value="emily">Emily</option>
+                <option value="enrique">Enrique</option>
+                <option value="fiona">Fiona</option>
+                <option value="giorgio">Giorgio</option>
+                <option value="hans">Hans</option>
+                <option value="helena">Helena</option>
+                <option value="jorge">Jorge</option>
+                <option value="kate">Kate</option>
+              </select>
+            </div>
+          </div>
+          <div class="speech-form__settings-area">
             <p class="speech-form__settings-label">Speed</p>
             <div class="speech-form__radio-area">
               <label for="one">
